@startuml
class Projeto {
  +nome: String
  +data_inicio: Date
  +data_fim: Date  
  +data_prevista_fim: Date
  +descricao: String
  +orcamento: Double
}


enum ProjetoCategoria {
    INOVAÇÃO
    EXTENSÃO
    TECNOLOGIA
}

class Financiador {
  +nome: String
  +email: String
}

class Papel {
  +funcao: String
  +descricao: String
}

class Pessoa {
  +nome: String
  +email: String
  +telefone: String
  +cpf: String
}

class HistoricoBolsa {
  +data: Date
  +descricao: String
}


class HistoricoProjeto {
  +data: Date
  +descricao: String
}

class HistoricoPapel{
  +data: Date
  +descricao: String
}


class Bolsa {
  +valor: Double
  +data_inicio: Date
  +data_fim: Date  
  +data_prevista_fim: Date
  +ativo: Boolean
}

class TipoBolsa {
  
}

enum StatusProjeto{
  INATIVO
  ATIVO
  CANCELADO
  FINALIZADO
}

enum Escolaridade {
    TECNICO
    ENSINO_SUPERIOR
    MESTRADO
    DOUTORADO
}

Projeto "1" -l-> "1" ProjetoCategoria : classifica <  
Projeto "1" -r- "N" Bolsa: contém >
Projeto "N" --> "1" Financiador : financia <
Projeto "1" -- "N" HistoricoProjeto : armazena <
Projeto "1" -- "N" Papel : possui >

HistoricoProjeto "1" --> "1" StatusProjeto : categoriza >

Bolsa "1" -- "1" HistoricoBolsa : armazena <
Bolsa "1" -- "1" Pessoa : recebe <
Bolsa "N" --> "1" TipoBolsa : especifica <

TipoBolsa "1" --> "1" Escolaridade : categoriza <


Pessoa "1" -- "N" HistoricoPapel : arquiva >

HistoricoPapel "1" -- "1" Papel : armazena >
@enduml